--- a/ISAutobuskaStanica.WPF/Views/AddAStanicaWindow.xaml
+++ b/ISAutobuskaStanica.WPF/Views/AddAStanicaWindow.xaml
@@ -7,9 +7,11 @@
         mc:Ignorable="d"
         Title="AddAStanicaWindow" Height="200" Width="400">
     <Grid Background="black">
-        <Label Background="gold" Width="100" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="97,25,196.6,0">Naziv Stanice:</Label>
-        <TextBox Width="200" Height="40" Text="{Binding Naziv, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <Label Background="gold" Width="100" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10,10,283.6,0">Naziv Stanice:</Label>
+        <TextBox Width="200" Height="40" Text="{Binding Naziv, UpdateSourceTrigger=PropertyChanged}" Margin="150,10,43.6,120.4"></TextBox>
         <Button Command="{Binding AddStanica}" Width="100" Height="30" VerticalAlignment="Bottom" Content="{Binding Content}" Margin="97,0,196.6,10.4"></Button>
         <Button Command="{Binding CloseWin}"  Background="MistyRose" Width="100" Height="30" VerticalAlignment="Bottom" Content="Cancel" Margin="202,0,91.6,10.4"></Button>
+        <TextBlock Foreground="Red" Text="{Binding Error, UpdateSourceTrigger=PropertyChanged}" Margin="22,68,25.6,61.4"></TextBlock>
+
     </Grid>
 </Window>
