--- a/ISAutobuskaStanica.WPF/Views/AddAutobuskiPrevoznikWindow.xaml
+++ b/ISAutobuskaStanica.WPF/Views/AddAutobuskiPrevoznikWindow.xaml
@@ -8,10 +8,10 @@
         Title="AddAutobuskiPrevoznikWindow" Height="200" Width="400">
 
         <Grid Background="black">
-            <Label Background="gold" Width="100" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="97,25,196.6,0">Naziv Prevoznika:</Label>
-            <TextBox Width="200" Height="40" Text="{Binding Ime, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <Label Background="gold" Width="100" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10,24,283.6,0">Naziv Prevoznika:</Label>
+            <TextBox Width="200" Height="40" Text="{Binding Ime, UpdateSourceTrigger=PropertyChanged}" Margin="10,73,183.6,57.4"></TextBox>
             <Button Command="{Binding AddCommand}" Width="100" Height="30" VerticalAlignment="Bottom" Content="Add" Margin="97,0,196.6,10.4"></Button>
             <Button Command="{Binding Cancel}"  Background="MistyRose" Width="100" Height="30" VerticalAlignment="Bottom" Content="Cancel" Margin="202,0,91.6,10.4"></Button>
-
+            <TextBlock Foreground="Red" Text="{Binding Error, UpdateSourceTrigger=PropertyChanged}" Margin="160,10,41.6,106.4"></TextBlock>
     </Grid>
 </Window>
