--- a/ISAutobuskaStanica.WPF/Views/AddRedVoznjeWindow.xaml
+++ b/ISAutobuskaStanica.WPF/Views/AddRedVoznjeWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ISAutobuskaStanica.WPF.Views"
         mc:Ignorable="d"
-        Title="AddRedVoznjeWindow" Height="200" Width="400">
+        Title="AddRedVoznjeWindow" Height="300" Width="400">
     <Grid Background="black">
         <Label Background="gold" Width="100" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="31,25,262.6,0">Id Stanice:</Label>
         <TextBox Height="40" Text="{Binding IdStanice, UpdateSourceTrigger=PropertyChanged}" Margin="31,60,262.6,70.4"/>
@@ -13,5 +13,7 @@
         <TextBox Height="40" Text="{Binding IdSezone, UpdateSourceTrigger=PropertyChanged}" Margin="235,60,58.6,70.4"/>
         <Button Command="{Binding AddRedVoznje}" Width="100" Height="30" VerticalAlignment="Bottom" Content="Add" Margin="97,0,196.6,10.4"></Button>
         <Button Command="{Binding Cancel}"  Background="MistyRose" Width="100" Height="30" VerticalAlignment="Bottom" Content="Cancel" Margin="202,0,91.6,10.4"></Button>
+        <TextBlock Foreground="Red" Text="{Binding Error, UpdateSourceTrigger=PropertyChanged}" Margin="10,155,37.6,45.4"></TextBlock>
+
     </Grid>
 </Window>
