--- a/ISAutobuskaStanica.WPF/Views/AddUgovorWindow.xaml
+++ b/ISAutobuskaStanica.WPF/Views/AddUgovorWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ISAutobuskaStanica.WPF.Views"
         mc:Ignorable="d"
-        Title="AddUgovorWindow" Height="200" Width="400">
+        Title="AddUgovorWindow" Height="300" Width="400">
     <Grid Background="black">
         <Label Background="gold" Width="100" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10,12,283.6,0">Id Stanice:</Label>
         <TextBox Height="40" Text="{Binding IDStanice, UpdateSourceTrigger=PropertyChanged}" Margin="10,65,268.6,65.4"/>
@@ -13,5 +13,7 @@
         <TextBox Height="40" Text="{Binding IDPrevoznika, UpdateSourceTrigger=PropertyChanged}" Margin="202,65,76.6,65.4"/>
         <Button Command="{Binding AddUgovor}" Width="100" Height="30" VerticalAlignment="Bottom" Content="Add" Margin="97,0,196.6,10.4"></Button>
         <Button Command="{Binding Cancel}"  Background="MistyRose" Width="100" Height="30" VerticalAlignment="Bottom" Content="Cancel" Margin="202,0,91.6,10.4"></Button>
+        <TextBlock Foreground="Red" Text="{Binding Error, UpdateSourceTrigger=PropertyChanged}" Margin="10,179,34.6,45.4" ></TextBlock>
+
     </Grid>
 </Window>
